<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="Input your password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/txtNewPass"
            android:layout_width="299dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Input your new password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/txtNewPassAgain"
            android:layout_width="299dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="150dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Confirm your new password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btnChange_passWord"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="cinfirm"
            android:textColor="@android:color/white" />








    </LinearLayout>

</ScrollView>