...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/login_bt"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:text="login"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:ems="10"
        android:hint="Input your password"
        android:inputType="textPassword" />

...
