...
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:background="#FFFFEF"
            android:text="Favorite"
            android:textColor="#000000" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"/>


    </LinearLayout>
...
