...
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:background="#FFFFEF"
            android:text="Favorite"
            android:textColor="#000000"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/explore_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            />
        <TextView
            android:id="@+id/explore_title"
...
            android:gravity="center"
            android:background="#FFFFEF"
            android:text="Explore"
            android:textColor="#000000"/>
        <Button
            android:onClick="showCreateChat"
            android:id = "@+id/explore_create"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text = "+"
...
